Save model and implement Poly SVR and Bayesian Ridge

--- a/CW-Brain-Age-Regression.ipynb
+++ b/CW-Brain-Age-Regression.ipynb
@@ -21,6 +21,7 @@
     "colab": {
       "name": "CW-Brain-Age-Regression.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -33,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/WenquanZou/MLI_Coursework/blob/master/CW-Brain-Age-Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/WenquanZou/MLI_Coursework/blob/Regression/CW-Brain-Age-Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -755,10 +756,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ll9r1PqwrEtb",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Model loading\n",
+        "Load trained model so we do not need to retrained it again"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "scrolled": true,
-        "id": "AgioJfcdzgiU",
+        "id": "vTrFPMMSrBdy",
         "colab_type": "code",
         "colab": {}
       },
@@ -767,6 +778,23 @@
         "if not os.path.exists(model_dir):\n",
         "    os.makedirs(model_dir)\n",
         "\n",
+        "model_path = os.path.join(model_dir, 'model.pt')\n",
+        "if os.path.exists(model_path):\n",
+        "    model = torch.load(model_path)\n",
+        "    model.cuda()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "scrolled": true,
+        "id": "AgioJfcdzgiU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "torch.manual_seed(rnd_seed) #fix random seed\n",
         "\n",
         "model = SimpleNet3D(num_classes=num_classes).to(device)\n",
@@ -1002,10 +1030,10 @@
         "import os\n",
         "\n",
         "# USE THIS TO RUN THE CALCULATIONS ON YOUR SEGMENTATONS\n",
-        "#seg_dir = './output/pred/'\n",
+        "seg_dir = './output/pred/'\n",
         "\n",
         "# USE THIS TO RUN THE CALCULATIONS ON OUR REFERENCE SEGMENTATIONS\n",
-        "seg_dir = data_dir + 'segs_refs/'\n",
+        "# seg_dir = data_dir + 'segs_refs/'\n",
         "\n",
         "meta_data_reg_train = pd.read_csv(data_dir + 'meta/meta_data_reg_train.csv')\n",
         "ids_reg_train = list(meta_data_reg_train['subject_id'])\n",
@@ -1179,15 +1207,48 @@
         "########################################\n",
         "\n",
         "from sklearn import linear_model\n",
+        "from sklearn.svm import SVR\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import mean_absolute_error, r2_score\n",
         "\n",
-        "train_X, test_X, train_y, test_y = train_test_split(X, y, test_size=0.5)\n",
-        "print(train_X.shape)\n",
-        "print(test_X.shape)\n",
+        "train_X, test_X, train_y, test_y = train_test_split(X, y, test_size=0.5)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7T1fUQCgmx-b",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "predictions = []\n",
+        "\n",
+        "# Linear regression\n",
         "reg = linear_model.LinearRegression()\n",
-        "reg.fit(X, y)\n",
-        "predicted = reg.predict(test_X)"
+        "reg.fit(train_X, train_y)\n",
+        "predictions.append(reg.predict(test_X))\n",
+        "mae_reg = mean_absolute_error(test_y, predictions[0])\n",
+        "r2_reg = r2_score(test_y, predictions[0])\n",
+        "print(f'Linear regression: mean absolute error: {mae_reg}, r2 score: {r2_reg}')\n",
+        "\n",
+        "# SVR with polynomial\n",
+        "reg_poly = SVR(kernel='poly')\n",
+        "reg_poly.fit(train_X, train_y)\n",
+        "predictions.append(reg_poly.predict(test_X))\n",
+        "mae_svr = mean_absolute_error(test_y, predictions[1])\n",
+        "r2_svr  = r2_score(test_y, predictions[1])\n",
+        "print(f'SVR of polynomial: mean absolute error: {mae_svr}, r2 score: {r2_svr}')\n",
+        "\n",
+        "# Lasso regression\n",
+        "reg_br = linear_model.BayesianRidge()\n",
+        "reg_br.fit(train_X, train_y)\n",
+        "predictions.append(reg_br.predict(test_X))\n",
+        "mae_br = mean_absolute_error(test_y, predictions[2])\n",
+        "r2_br  = r2_score(test_y, predictions[2])\n",
+        "print(f'SVR of polynomial: mean absolute error: {mae_br}, r2 score: {r2_br}')\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1210,14 +1271,14 @@
         "colab": {}
       },
       "source": [
-        "print('mean absolute error: {0}'.format(mean_absolute_error(test_y,predicted)))\n",
-        "print('r2 score: {0}'.format(r2_score(test_y,predicted)))\n",
-        "\n",
-        "fig, ax = plt.subplots()\n",
-        "ax.scatter(test_y, predicted, marker='.')\n",
-        "ax.plot([test_y.min(), test_y.max()], [test_y.min(), test_y.max()], 'k--', lw=2)\n",
-        "ax.set_xlabel('Real Age')\n",
-        "ax.set_ylabel('Predicted Age')\n",
+        "fig, ax = plt.subplots(1, 3, figsize=(9, 3), sharey=True)\n",
+        "methods = ['Linear Regression', 'Polynomial SVR', 'Bayesian Ridge']\n",
+        "for i in range(3):\n",
+        "  ax[i].scatter(test_y, predictions[i], marker='.')\n",
+        "  ax[i].plot([test_y.min(), test_y.max()], [test_y.min(), test_y.max()], 'k--', lw=2)\n",
+        "  ax[i].set_xlabel('Real Age')\n",
+        "  ax[i].set_ylabel('Predicted Age')\n",
+        "  ax[i].set_title(methods[i])\n",
         "plt.show()"
       ],
       "execution_count": 0,
