Get test file from github

--- a/CW-Brain-Age-Regression.ipynb
+++ b/CW-Brain-Age-Regression.ipynb
@@ -97,6 +97,7 @@
       "source": [
         "! pip install SimpleITK==1.2.2 \n",
         "! wget https://www.doc.ic.ac.uk/~bglocker/teaching/notebooks/brainage-data.zip\n",
+        "! wget https://raw.githubusercontent.com/WenquanZou/MLI_Coursework/master/meta_data_reg_test.csv\n",
         "! unzip brainage-data.zip\n",
         "\n",
         "# data directory\n",
@@ -886,8 +887,8 @@
         "colab": {}
       },
       "source": [
-        "meta_data_reg_train = pd.read_csv(data_dir + 'meta/meta_data_reg_train.csv')\n",
-        "ids_seg_test = list(meta_data_reg_train['subject_id'])\n",
+        "meta_data_reg_test = pd.read_csv('meta_data_reg_test.csv')\n",
+        "ids_seg_test = list(meta_data_reg_test['subject_id'])\n",
         "files_seg_img_test = [data_dir + 'images/sub-' + f + '_T1w_unbiased.nii.gz' for f in ids_seg_test]\n",
         "files_seg_seg_test = [data_dir + 'segs_refs/sub-' + f + '_T1w_seg.nii.gz' for f in ids_seg_test]\n",
         "files_seg_msk_test = [data_dir + 'masks/sub-' + f + '_T1w_brain_mask.nii.gz' for f in ids_seg_test]\n",
