Implemented preprocessing and PCA

--- a/CW-Brain-Age-Regression.ipynb
+++ b/CW-Brain-Age-Regression.ipynb
@@ -21,7 +21,7 @@
     "colab": {
       "name": "CW-Brain-Age-Regression.ipynb",
       "provenance": [],
-      "toc_visible": true,
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/WenquanZou/MLI_Coursework/blob/master/CW-Brain-Age-Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/WenquanZou/MLI_Coursework/blob/PCA/CW-Brain-Age-Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -97,7 +97,6 @@
       "source": [
         "! pip install SimpleITK==1.2.2 \n",
         "! wget https://www.doc.ic.ac.uk/~bglocker/teaching/notebooks/brainage-data.zip\n",
-        "! wget https://raw.githubusercontent.com/WenquanZou/MLI_Coursework/master/meta_data_reg_test.csv\n",
         "! unzip brainage-data.zip\n",
         "\n",
         "# data directory\n",
@@ -887,8 +886,8 @@
         "colab": {}
       },
       "source": [
-        "meta_data_reg_test = pd.read_csv('meta_data_reg_test.csv')\n",
-        "ids_seg_test = list(meta_data_reg_test['subject_id'])\n",
+        "meta_data_reg_train = pd.read_csv(data_dir + 'meta/meta_data_reg_train.csv')\n",
+        "ids_seg_test = list(meta_data_reg_train['subject_id'])\n",
         "files_seg_img_test = [data_dir + 'images/sub-' + f + '_T1w_unbiased.nii.gz' for f in ids_seg_test]\n",
         "files_seg_seg_test = [data_dir + 'segs_refs/sub-' + f + '_T1w_seg.nii.gz' for f in ids_seg_test]\n",
         "files_seg_msk_test = [data_dir + 'masks/sub-' + f + '_T1w_brain_mask.nii.gz' for f in ids_seg_test]\n",
@@ -1278,13 +1277,13 @@
         "r2_svr  = r2_score(test_y, predictions[1])\n",
         "print(f'SVR of polynomial: mean absolute error: {mae_svr}, r2 score: {r2_svr}')\n",
         "\n",
-        "# Lasso regression\n",
+        "# Bayesian Ridge\n",
         "reg_br = linear_model.BayesianRidge()\n",
         "reg_br.fit(train_X, train_y)\n",
         "predictions.append(reg_br.predict(test_X))\n",
         "mae_br = mean_absolute_error(test_y, predictions[2])\n",
         "r2_br  = r2_score(test_y, predictions[2])\n",
-        "print(f'SVR of polynomial: mean absolute error: {mae_br}, r2 score: {r2_br}')\n"
+        "print(f'Bayesian Ridge: mean absolute error: {mae_br}, r2 score: {r2_br}')\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1316,6 +1315,20 @@
         "  ax[i].set_ylabel('Predicted Age')\n",
         "  ax[i].set_title(methods[i])\n",
         "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7poC59TvUpuD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1364,7 +1377,18 @@
       "source": [
         "########################################\n",
         "# ADD YOUR CODE HERE\n",
-        "########################################"
+        "########################################\n",
+        "import glob\n",
+        "\n",
+        "# Getting image data from file\n",
+        "\n",
+        "meta_data_reg_train = pd.read_csv(data_dir + 'meta/meta_data_reg_train.csv')\n",
+        "ids_reg_gm_train = list(meta_data_reg_train['subject_id'])\n",
+        "greymatter_dir = data_dir + 'greymatter/wc1sub-'\n",
+        "greymatter_files = [greymatter_dir + f + '_T1w.nii.gz' for f in ids_reg_train]\n",
+        "greymatters = [sitk.ReadImage(greymatter_file) for greymatter_file in greymatter_files]\n",
+        "display_image(greymatters[0])\n",
+        "img_data = np.array([sitk.GetArrayFromImage(greymatter) for greymatter in greymatters])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1386,6 +1410,73 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3bDpAAP1a3pN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Pre-processing\n",
+        "def resample(img, new_size=None, new_spacing=None):\n",
+        "    old_size = img.GetSize()\n",
+        "    old_spacing = img.GetSpacing()\n",
+        "    \n",
+        "    if new_size is None and new_spacing is None:\n",
+        "        return img\n",
+        "    \n",
+        "    if new_size is None:\n",
+        "        # Compute new image dimensions based on the desired rescaling of the voxel spacing\n",
+        "        new_size = [int(np.ceil(old_size[d] * old_spacing[d] / new_spacing[d])) for d in range(3)]\n",
+        "\n",
+        "    if new_spacing is None:\n",
+        "        # Compute new voxel spacing based on the desired rescaling of the image dimensions\n",
+        "        new_spacing = [old_spacing[d] * old_size[d] / new_size[d] for d in range(3)]\n",
+        "\n",
+        "    # Smooth the input image with anisotropic Gaussian filter\n",
+        "    img_smoothed = img\n",
+        "    for d in range(3):\n",
+        "        # Note how the blurring strength can be different in each direction,\n",
+        "        # if the scaling factors are different.\n",
+        "        factor = new_spacing[d] / old_spacing[d]\n",
+        "        sigma = 0.2 * factor\n",
+        "        img_smoothed = sitk.RecursiveGaussian(img_smoothed, sigma=sigma, direction=d)\n",
+        "\n",
+        "    # Finally, apply the resampling operation\n",
+        "    img_resampled = sitk.ResampleImageFilter().Execute(\n",
+        "        img_smoothed,        # Input image\n",
+        "        new_size,            # Output image dimensions\n",
+        "        sitk.Transform(),    # Coordinate transformation. sitk.Transform() is a dummy identity transform,\n",
+        "                             # as we want the brain to be in exactly the same place. When we do image registration,\n",
+        "                             # for example, this can be a linear or nonlinear transformation.\n",
+        "        sitk.sitkLinear,     # Interpolation method (cf. also sitk.sitkNearestNeighbor and many others)\n",
+        "        img.GetOrigin(),     # Output image origin (same)\n",
+        "        new_spacing,         # Output voxel spacing\n",
+        "        img.GetDirection(),  # Output image orientation (same)\n",
+        "        0,                   # Fill value for points outside the input domain\n",
+        "        img.GetPixelID())    # Voxel data type (same)\n",
+        "\n",
+        "    img_resampled = zero_mean_unit_var(img_resampled, img_resampled)\n",
+        "    return img_resampled\n",
+        "\n",
+        "img_resampled = [resample(greymatter, new_spacing=[5, 5, 5]) for greymatter in greymatters]\n",
+        "\n",
+        "display_image(img_resampled[0])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oc0PgCKKVunD",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1411,7 +1502,22 @@
       "source": [
         "########################################\n",
         "# ADD YOUR CODE HERE\n",
-        "########################################"
+        "########################################\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.utils import shuffle\n",
+        "\n",
+        "\n",
+        "def perform_PCA(_X, _y):\n",
+        "  __X, __y = shuffle(_X, _y)\n",
+        "\n",
+        "  train_X, test_X, train_y, test_y = train_test_split(__X.reshape(__X.shape[0], -1),  __y.ravel(), test_size = 0.5)\n",
+        "  pca = PCA(n_components=0.95)\n",
+        "  pca.fit(train_X)\n",
+        "  \n",
+        "  train_X = pca.transform(train_X)\n",
+        "  test_X = pca.transform(test_X)\n",
+        "\n",
+        "  return train_X, test_X, train_y, test_y"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1442,7 +1548,48 @@
       "source": [
         "########################################\n",
         "# ADD YOUR CODE HERE\n",
-        "########################################"
+        "########################################\n",
+        "from sklearn import linear_model, neural_network\n",
+        "from sklearn.svm import SVR\n",
+        "from sklearn.metrics import mean_absolute_error, r2_score\n",
+        "\n",
+        "np_img_resampled = np.array([sitk.GetArrayFromImage(x) for x in img_resampled])\n",
+        "\n",
+        "train_X, test_X, train_y, test_y = perform_PCA(np_img_resampled, y)\n",
+        "\n",
+        "predictions = []\n",
+        "\n",
+        "# Linear regression\n",
+        "reg = linear_model.LinearRegression()\n",
+        "reg.fit(train_X, train_y)\n",
+        "predictions.append(reg.predict(test_X))\n",
+        "mae_reg = mean_absolute_error(test_y, predictions[0])\n",
+        "r2_reg = r2_score(test_y, predictions[0])\n",
+        "print(f'Linear regression: mean absolute error: {mae_reg}, r2 score: {r2_reg}')\n",
+        "\n",
+        "# SVR with polynomial\n",
+        "reg_poly = SVR(kernel='poly')\n",
+        "reg_poly.fit(train_X, train_y)\n",
+        "predictions.append(reg_poly.predict(test_X))\n",
+        "mae_svr = mean_absolute_error(test_y, predictions[1])\n",
+        "r2_svr  = r2_score(test_y, predictions[1])\n",
+        "print(f'SVR of polynomial: mean absolute error: {mae_svr}, r2 score: {r2_svr}')\n",
+        "\n",
+        "# Lasso Regression \n",
+        "reg_lr = linear_model.Lasso(alpha=0.1)\n",
+        "reg_lr.fit(train_X, train_y)\n",
+        "predictions.append(reg_lr.predict(test_X))\n",
+        "mae_reg_lr = mean_absolute_error(test_y, predictions[2])\n",
+        "r2_reg_lr = r2_score(test_y, predictions[2])\n",
+        "print(f'Lasso Regression: mean absolute error: {mae_reg_lr}, r2 score: {r2_reg_lr}')\n",
+        "\n",
+        "# Bayesian Ridge regression\n",
+        "reg_br = linear_model.BayesianRidge()\n",
+        "reg_br.fit(train_X, train_y)\n",
+        "predictions.append(reg_br.predict(test_X))\n",
+        "mae_br = mean_absolute_error(test_y, predictions[3])\n",
+        "r2_br  = r2_score(test_y, predictions[3])\n",
+        "print(f'Bayesian Regression: mean absolute error: {mae_br}, r2 score: {r2_br}')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1465,14 +1612,14 @@
         "colab": {}
       },
       "source": [
-        "print('mean absolute error: {0}'.format(mean_absolute_error(y,predicted)))\n",
-        "print('r2 score: {0}'.format(r2_score(y,predicted)))\n",
-        "\n",
-        "fig, ax = plt.subplots()\n",
-        "ax.scatter(y, predicted, marker='.')\n",
-        "ax.plot([y.min(), y.max()], [y.min(), y.max()], 'k--', lw=2)\n",
-        "ax.set_xlabel('Real Age')\n",
-        "ax.set_ylabel('Predicted Age')\n",
+        "fig, ax = plt.subplots(1, 4, figsize=(9, 3), sharey=True)\n",
+        "methods = ['Linear Regression', 'Polynomial SVR', 'Lasso Regression', 'Bayesian Ridge']\n",
+        "for i in range(4):\n",
+        "  ax[i].scatter(test_y, predictions[i], marker='.')\n",
+        "  ax[i].plot([test_y.min(), test_y.max()], [test_y.min(), test_y.max()], 'k--', lw=2)\n",
+        "  ax[i].set_xlabel('Real Age')\n",
+        "  ax[i].set_ylabel('Predicted Age')\n",
+        "  ax[i].set_title(methods[i])\n",
         "plt.show()"
       ],
       "execution_count": 0,
