--- a/CW-Brain-Age-Regression.ipynb
+++ b/CW-Brain-Age-Regression.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/WenquanZou/MLI_Coursework/blob/master/CW-Brain-Age-Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/WenquanZou/MLI_Coursework/blob/CNN/CW-Brain-Age-Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1504,7 +1504,330 @@
       "source": [
         "########################################\n",
         "# ADD YOUR CODE HERE\n",
-        "########################################"
+        "########################################\n",
+        "import os\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "from tqdm import tqdm"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4rQNsRjXsIsE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Read the meta data using pandas\n",
+        "import pandas as pd\n",
+        "\n",
+        "# data directory\n",
+        "data_dir = 'data/brain_age/'\n",
+        "meta_data_reg_train = pd.read_csv(data_dir + 'meta/meta_data_reg_train.csv')\n",
+        "meta_data_reg_train.head() # show the first five data entries"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z6q-TBkZrxVT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Subject with index 0\n",
+        "ID = meta_data_reg_train['subject_id'][0]\n",
+        "age = meta_data_reg_train['age'][0]\n",
+        "\n",
+        "# Grey matter map\n",
+        "gm_filename = data_dir + 'greymatter/wc1sub-' + ID + '_T1w.nii.gz'\n",
+        "gm = sitk.ReadImage(gm_filename)\n",
+        "\n",
+        "print('Imaging data of subject ' + ID + ' with age ' + str(age))\n",
+        "\n",
+        "print('Spatially normalised grey matter maps')\n",
+        "display_image(gm)\n",
+        "img = sitk.GetArrayFromImage(gm)\n",
+        "print(img.shape)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IrGSmpNFsfng",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def resample_image(image, out_spacing=(1.0, 1.0, 1.0), out_size=None, is_label=False, pad_value=0):\n",
+        "    \"\"\"Resamples an image to given element spacing and output size.\"\"\"\n",
+        "\n",
+        "    original_spacing = np.array(image.GetSpacing())\n",
+        "    original_size = np.array(image.GetSize())\n",
+        "\n",
+        "    if out_size is None:\n",
+        "        out_size = np.round(np.array(original_size * original_spacing / np.array(out_spacing))).astype(int)\n",
+        "    else:\n",
+        "        out_size = np.array(out_size)\n",
+        "\n",
+        "    original_direction = np.array(image.GetDirection()).reshape(len(original_spacing),-1)\n",
+        "    original_center = (np.array(original_size, dtype=float) - 1.0) / 2.0 * original_spacing\n",
+        "    out_center = (np.array(out_size, dtype=float) - 1.0) / 2.0 * np.array(out_spacing)\n",
+        "\n",
+        "    original_center = np.matmul(original_direction, original_center)\n",
+        "    out_center = np.matmul(original_direction, out_center)\n",
+        "    out_origin = np.array(image.GetOrigin()) + (original_center - out_center)\n",
+        "\n",
+        "    resample = sitk.ResampleImageFilter()\n",
+        "    resample.SetOutputSpacing(out_spacing)\n",
+        "    resample.SetSize(out_size.tolist())\n",
+        "    resample.SetOutputDirection(image.GetDirection())\n",
+        "    resample.SetOutputOrigin(out_origin.tolist())\n",
+        "    resample.SetTransform(sitk.Transform())\n",
+        "    resample.SetDefaultPixelValue(pad_value)\n",
+        "\n",
+        "    if is_label:\n",
+        "        resample.SetInterpolator(sitk.sitkNearestNeighbor)\n",
+        "    else:\n",
+        "        resample.SetInterpolator(sitk.sitkBSpline)\n",
+        "\n",
+        "    return resample.Execute(image)\n",
+        "\n",
+        "\n",
+        "class ImageRegressionDataset(Dataset):\n",
+        "    \"\"\"Dataset for image segmentation.\"\"\"\n",
+        "\n",
+        "    def __init__(self, file_list_reg, age, img_spacing, img_size):\n",
+        "        self.samples = []\n",
+        "        self.img_names = []\n",
+        "\n",
+        "        for idx, _ in enumerate(tqdm(range(len(file_list_reg)), desc='Loading Data')):\n",
+        "            img_path = file_list_reg[idx]\n",
+        "\n",
+        "            img = sitk.ReadImage(img_path, sitk.sitkFloat32)\n",
+        "\n",
+        "            #pre=processing\n",
+        "            img = resample_image(img, img_spacing, img_size, is_label=False)\n",
+        "\n",
+        "            sample = {'img': img, 'age': age[idx]}\n",
+        "\n",
+        "            self.samples.append(sample)\n",
+        "            self.img_names.append(os.path.basename(img_path))\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.samples)\n",
+        "\n",
+        "    def __getitem__(self, item):\n",
+        "        sample = self.samples[item]\n",
+        "        \n",
+        "        image = torch.from_numpy(sitk.GetArrayFromImage(sample['img'])).unsqueeze(0)\n",
+        "        return {'img': image, 'age':sample['age']}\n",
+        "\n",
+        "    def get_sample(self, item):\n",
+        "        return self.samples[item]\n",
+        "\n",
+        "    def get_img_name(self, item):\n",
+        "        return self.img_names[item]\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PI3ibdLcKSWr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cuda_dev = '0' #GPU device 0 (can be changed if multiple GPUs are available)\n",
+        "\n",
+        "use_cuda = torch.cuda.is_available()\n",
+        "device = torch.device(\"cuda:\" + cuda_dev if use_cuda else \"cpu\")\n",
+        "\n",
+        "print('Device: ' + str(device))\n",
+        "if use_cuda:\n",
+        "    print('GPU: ' + str(torch.cuda.get_device_name(int(cuda_dev))))        "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rU2F6F-rtAS3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "rnd_seed = 42 #fixed random seed\n",
+        "\n",
+        "img_size = [32, 32, 32]\n",
+        "img_spacing = [3, 3, 3]\n",
+        "\n",
+        "num_epochs = 100\n",
+        "learning_rate = 1e-4\n",
+        "batch_size = 6\n",
+        "val_interval = 10\n",
+        "\n",
+        "out_dir = './output'\n",
+        "\n",
+        "# Create output directory\n",
+        "if not os.path.exists(out_dir):\n",
+        "    os.makedirs(out_dir)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c2RXkDP4tHNY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "meta_data_reg_train = pd.read_csv(data_dir + 'meta/meta_data_reg_train.csv')\n",
+        "ids_reg_train = list(meta_data_reg_train['subject_id'])\n",
+        "reg_train_age = list(meta_data_reg_train['age'])\n",
+        "files_reg_img_train = [data_dir + 'greymatter/wc1sub-' + f + '_T1w.nii.gz' for f in ids_reg_train]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8V67bquotdXJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset_train = ImageRegressionDataset(files_reg_img_train, reg_train_age, img_spacing, img_size)\n",
+        "dataloader_train = torch.utils.data.DataLoader(dataset_train, batch_size=batch_size, shuffle=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rcTZfYDZuFE6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sample = dataset_train.get_sample(0)\n",
+        "img_name = dataset_train.get_img_name(0)\n",
+        "print('Image: ' + img_name)\n",
+        "display_image(sample['img'], window=5, level=0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rHDrf4giuWxT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class LeNet(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(LeNet, self).__init__()\n",
+        "        # Make the above architecture of LeNet.\n",
+        "        # bias=True makes the layer create a bias internally. Nice and clean.\n",
+        "        # Conv2d gets args: (num input channs, num out channs, kernel_size ...)\n",
+        "        # Linear gets args: (num input neurons, num out neurons, ...)\n",
+        "        self.conv1 = nn.Conv3d(1, 1, kernel_size=2, bias=True, padding=0)\n",
+        "        self.conv2 = nn.Conv3d(1, 12, kernel_size=5, bias=True, padding=0)\n",
+        "        self.conv3 = nn.Conv3d(12, 32, kernel_size=5, bias=True, padding=0)\n",
+        "        self.drop1 = nn.Dropout(p=0.2)\n",
+        "        self.fc1 = nn.Linear(32 * 5 * 5 * 5, 120, bias=True) \n",
+        "        self.fc2 = nn.Linear(120, 84, bias=True)\n",
+        "        self.fc3 = nn.Linear(84, 1, bias=True)\n",
+        "    \n",
+        "    def forward(self, x):\n",
+        "        # x: Input tensor (batch of images) of shape [N, Channels, H, W]\n",
+        "        # returns: tensor of shape [N, classes]. The class posterior probabilities.\n",
+        "        # Make the forward pass.\n",
+        "        x = F.max_pool3d(F.relu(self.conv1(x)), kernel_size=2, stride=2, padding=1, ceil_mode=False)\n",
+        "        x = F.max_pool3d(F.relu(self.conv2(x)), kernel_size=2, stride=2, padding=0, ceil_mode=False)\n",
+        "        x = F.max_pool3d(F.relu(self.conv3(x)), kernel_size=2, stride=2, padding=0, ceil_mode=False)\n",
+        "        x = self.drop1(x)\n",
+        "        x = x.reshape(x.shape[0], -1)\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = F.relu(self.fc2(x))\n",
+        "        y_pred = self.fc3(x)\n",
+        "        ####################################################################\n",
+        "        return y_pred"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "53PrySQ32fkP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = LeNet()\n",
+        "model.cuda()\n",
+        "model.train()\n",
+        "    \n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+        "\n",
+        "loss_train_log = []\n",
+        "print('START TRAINING...')\n",
+        "for epoch in range(1, num_epochs + 1):\n",
+        "\n",
+        "    # Training\n",
+        "    for batch_idx, batch_samples in enumerate(dataloader_train):\n",
+        "        img = batch_samples['img'].to(device)\n",
+        "        age = batch_samples['age'].type(torch.float).to(device)\n",
+        "        optimizer.zero_grad()\n",
+        "        prd = model(img)\n",
+        "        age = age.reshape(-1, 1)\n",
+        "        loss = F.mse_loss(prd, age)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "    loss_train_log.append(loss.item())\n",
+        "\n",
+        "    print('+ TRAINING \\tEpoch: {} \\tLoss: {:.6f}'.format(epoch, loss.item()))\n",
+        "\n",
+        "print('\\nFinished TRAINING.')\n",
+        "\n",
+        "plt.plot(range(1, num_epochs + 1), loss_train_log, c='r', label='train')\n",
+        "plt.legend(loc='upper right')\n",
+        "plt.xlabel('epoch')\n",
+        "plt.ylabel('loss')\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DzHbEcnQ2aqZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
