Fix test path problem

--- a/CW-Brain-Age-Regression.ipynb
+++ b/CW-Brain-Age-Regression.ipynb
@@ -658,8 +658,7 @@
       "source": [
         "# LOAD ACTUAL TRAINING DATA\n",
         "dataset_train = ImageSegmentationDataset(files_seg_img_train, files_seg_seg_train, files_seg_msk_train, img_spacing, img_size)\n",
-        "# LOAD VALIDATION DATA AS TRAINING FOR QUICK DEBUGGING\n",
-        "# dataset_train = ImageSegmentationDataset(files_seg_img_val, files_seg_seg_val, files_seg_msk_val, img_spacing, img_size)\n",
+        "\n",
         "dataloader_train = torch.utils.data.DataLoader(dataset_train, batch_size=batch_size, shuffle=True)\n",
         "\n",
         "dataset_val = ImageSegmentationDataset(files_seg_img_val, files_seg_seg_val, files_seg_msk_val, img_spacing, img_size)\n",
@@ -729,14 +728,16 @@
         "\n",
         "    def __init__(self, num_classes):\n",
         "        super(SimpleNet3D, self).__init__()\n",
-        "        self.conv1 = nn.Conv3d(1, 64, kernel_size=3, padding=1)\n",
-        "        self.conv2 = nn.Conv3d(64, 32, kernel_size=3, padding=1)\n",
-        "        self.conv3 = nn.Conv3d(32, 16, kernel_size=3, padding=1)\n",
-        "        self.conv4 = nn.Conv3d(16, num_classes, kernel_size=3, padding=1)\n",
+        "        self.conv1 = nn.Conv3d(1, 128, kernel_size=3, padding=1)\n",
+        "        self.conv2 = nn.Conv3d(128, 64, kernel_size=3, padding=1)\n",
+        "        self.drop1 = nn.Dropout(p=0.2)\n",
+        "        self.conv3 = nn.Conv3d(64, 32, kernel_size=3, padding=1)\n",
+        "        self.conv4 = nn.Conv3d(32, num_classes, kernel_size=3, padding=1)\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = F.relu(self.conv1(x))\n",
         "        x = F.relu(self.conv2(x))\n",
+        "        x = self.drop1(x)\n",
         "        x = F.relu(self.conv3(x))\n",
         "        x = self.conv4(x)\n",
         "        return F.softmax(x, dim=1)"
@@ -902,6 +903,37 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "lCEHUHJo5GW2",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Loading and pre-processing of training data\n",
+        "We run 500 subjects that are used for training and compare with the test dataset."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XPc0wnHD64Kl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "meta_data_reg_train = pd.read_csv(data_dir + 'meta/meta_data_reg_train.csv')\n",
+        "ids_seg_train = list(meta_data_reg_train['subject_id'])\n",
+        "files_seg_img_train = [data_dir + 'images/sub-' + f + '_T1w_unbiased.nii.gz' for f in ids_seg_train]\n",
+        "files_seg_seg_train = [data_dir + 'segs_refs/sub-' + f + '_T1w_seg.nii.gz' for f in ids_seg_train]\n",
+        "files_seg_msk_train = [data_dir + 'masks/sub-' + f + '_T1w_brain_mask.nii.gz' for f in ids_seg_train]\n",
+        "\n",
+        "dataset_train = ImageSegmentationDataset(files_seg_img_train, files_seg_seg_train, files_seg_msk_train, img_spacing, img_size)\n",
+        "dataloader_train = torch.utils.data.DataLoader(dataset_train, batch_size=1, shuffle=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EwA5bJjMzgic",
         "colab_type": "text"
       },
@@ -949,12 +981,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "scrolled": true,
-        "id": "ty6ctX9azgih",
+        "id": "DcEZ5ZsrJdN-",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "# Model set up\n",
         "pred_dir = os.path.join(out_dir, 'pred')\n",
         "if not os.path.exists(pred_dir):\n",
         "    os.makedirs(pred_dir)\n",
@@ -962,8 +994,20 @@
         "model = SimpleNet3D(num_classes=num_classes)\n",
         "model.load_state_dict(torch.load(os.path.join(model_dir, 'model.pt')))\n",
         "model.to(device)\n",
-        "model.eval()\n",
-        "    \n",
+        "model.eval()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "scrolled": true,
+        "id": "ty6ctX9azgih",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "print('START TESTING...')\n",
         "\n",
         "loss_test = 0\n",
@@ -992,6 +1036,97 @@
         "        sitk.WriteImage(prediction, os.path.join(pred_dir, name))\n",
         "        \n",
         "        idx_test += 1\n",
+        "\n",
+        "        # Get image in array form \n",
+        "        ref_img = sample['seg']\n",
+        "        pred_img = prediction\n",
+        "        ref_img_arr = sitk.GetArrayFromImage(ref_img)\n",
+        "        pred_img_arr = sitk.GetArrayFromImage(pred_img)\n",
+        "\n",
+        "        # Compute overlap measures between same set of labels of pixels of two images\n",
+        "        overlap = sitk.LabelOverlapMeasuresImageFilter()\n",
+        "        for i, segment_dice_scores in enumerate([CSF_dice_scores, GM_dice_scores, WM_dice_scores]):\n",
+        "          \n",
+        "          # Dice score calculation for one segmentation\n",
+        "          ref_segment_arr = (ref_img_arr == (i + 1)).astype(int)\n",
+        "          pred_segment_arr = (pred_img_arr == (i + 1)).astype(int)\n",
+        "          ref_segment = sitk.GetImageFromArray(ref_segment_arr)\n",
+        "          pred_segment = sitk.GetImageFromArray(pred_segment_arr)\n",
+        "          \n",
+        "          overlap.Execute(ref_segment, pred_segment)\n",
+        "          current_dice_score = overlap.GetDiceCoefficient()\n",
+        "          segment_dice_scores.append(current_dice_score)\n",
+        "\n",
+        "loss_test /= sum_pts\n",
+        "\n",
+        "print('+ TESTING \\tLoss: {:.6f}'.format(loss_test))\n",
+        "\n",
+        "# Show last testing sample as an example\n",
+        "print('\\n\\nReference segmentation')\n",
+        "display_image(sitk.LabelToRGB(sample['seg']))\n",
+        "print('Predicted segmentation')\n",
+        "display_image(sitk.LabelToRGB(prediction))\n",
+        "\n",
+        "\n",
+        "f, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(17.5, 5))\n",
+        "f.suptitle('600 Dice Scores for each segementation', fontsize=15)\n",
+        "ax1.boxplot(CSF_dice_scores)\n",
+        "ax2.boxplot(GM_dice_scores)\n",
+        "ax3.boxplot(WM_dice_scores)\n",
+        "ax1.set_title('CSF Dice Score')\n",
+        "ax2.set_title('GM Dice Score')\n",
+        "ax3.set_title('WM Dice Score')\n",
+        "print('\\nFinished TESTING.')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qu-SjPz5JM8n",
+        "colab_type": "text"
+      },
+      "source": [
+        "Runnning test use training dataset\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Felq6rPhJLB0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print('START TESTING with training dataset...')\n",
+        "\n",
+        "loss_test = 0\n",
+        "sum_pts = 0\n",
+        "idx_train = 0\n",
+        "\n",
+        "CSF_dice_scores = []\n",
+        "GM_dice_scores = []\n",
+        "WM_dice_scores = []\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "    for data_sample in dataloader_train:\n",
+        "        img, seg = data_sample['img'].to(device), data_sample['seg'].to(device)\n",
+        "        prd = model(img)\n",
+        "        prd_flat = prd.view(prd.size(0), prd.size(1), -1)\n",
+        "        seg_flat = seg.view(seg.size(0), seg.size(1), -1)\n",
+        "        loss_test += F.cross_entropy(prd_flat, seg_flat.squeeze(1), reduction='sum').item()\n",
+        "        sum_pts += seg_flat.size(2)        \n",
+        "        \n",
+        "        prd = torch.argmax(prd, dim=1)\n",
+        "\n",
+        "        sample = dataset_train.get_sample(idx_train)\n",
+        "        name = dataset_train.get_seg_name(idx_train)\n",
+        "        prediction = sitk.GetImageFromArray(prd.cpu().squeeze().numpy().astype(np.uint8))\n",
+        "        prediction.CopyInformation(sample['seg'])\n",
+        "        sitk.WriteImage(prediction, os.path.join(pred_dir, name))\n",
+        "        \n",
+        "        idx_train += 1\n",
         "\n",
         "        # Get image in array form \n",
         "        ref_img = sample['seg']\n",
@@ -1081,7 +1216,6 @@
         "for idx, _ in enumerate(tqdm(range(len(files_reg_seg_train)), desc='Calculating Features')):\n",
         "    \n",
         "    seg_filename = files_reg_seg_train[idx]\n",
-        "    \n",
         "    if os.path.exists(seg_filename):\n",
         "        seg = sitk.ReadImage(seg_filename)\n",
         "        \n",
@@ -1284,7 +1418,7 @@
         "predictions.append(reg_br.predict(test_X))\n",
         "mae_br = mean_absolute_error(test_y, predictions[2])\n",
         "r2_br  = r2_score(test_y, predictions[2])\n",
-        "print(f'SVR of polynomial: mean absolute error: {mae_br}, r2 score: {r2_br}')\n"
+        "print(f'Bayesian Ridge: mean absolute error: {mae_br}, r2 score: {r2_br}')\n"
       ],
       "execution_count": 0,
       "outputs": []
