Use new test dataset for testing

--- a/CW-Brain-Age-Regression.ipynb
+++ b/CW-Brain-Age-Regression.ipynb
@@ -21,6 +21,7 @@
     "colab": {
       "name": "CW-Brain-Age-Regression.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "machine_shape": "hm",
       "include_colab_link": true
     },
@@ -34,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/WenquanZou/MLI_Coursework/blob/PCA/CW-Brain-Age-Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/WenquanZou/MLI_Coursework/blob/master/CW-Brain-Age-Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -97,6 +98,7 @@
       "source": [
         "! pip install SimpleITK==1.2.2 \n",
         "! wget https://www.doc.ic.ac.uk/~bglocker/teaching/notebooks/brainage-data.zip\n",
+        "! wget https://raw.githubusercontent.com/WenquanZou/MLI_Coursework/master/meta_data_reg_test.csv\n",
         "! unzip brainage-data.zip\n",
         "\n",
         "# data directory\n",
@@ -583,11 +585,11 @@
       "source": [
         "rnd_seed = 42 #fixed random seed\n",
         "\n",
-        "img_size = [64, 64, 64]\n",
-        "img_spacing = [3, 3, 3]\n",
+        "img_size = [96, 96, 96]\n",
+        "img_spacing = [2, 2, 2]\n",
         "\n",
         "num_epochs = 100\n",
-        "learning_rate = 0.001\n",
+        "learning_rate = 0.0005\n",
         "batch_size = 2\n",
         "val_interval = 10\n",
         "\n",
@@ -657,7 +659,8 @@
       "source": [
         "# LOAD ACTUAL TRAINING DATA\n",
         "dataset_train = ImageSegmentationDataset(files_seg_img_train, files_seg_seg_train, files_seg_msk_train, img_spacing, img_size)\n",
-        "\n",
+        "# LOAD VALIDATION DATA AS TRAINING FOR QUICK DEBUGGING\n",
+        "# dataset_train = ImageSegmentationDataset(files_seg_img_val, files_seg_seg_val, files_seg_msk_val, img_spacing, img_size)\n",
         "dataloader_train = torch.utils.data.DataLoader(dataset_train, batch_size=batch_size, shuffle=True)\n",
         "\n",
         "dataset_val = ImageSegmentationDataset(files_seg_img_val, files_seg_seg_val, files_seg_msk_val, img_spacing, img_size)\n",
@@ -727,11 +730,11 @@
         "\n",
         "    def __init__(self, num_classes):\n",
         "        super(SimpleNet3D, self).__init__()\n",
-        "        self.conv1 = nn.Conv3d(1, 128, kernel_size=3, padding=1)\n",
-        "        self.conv2 = nn.Conv3d(128, 64, kernel_size=3, padding=1)\n",
+        "        self.conv1 = nn.Conv3d(1, 64, kernel_size=3, padding=1)\n",
+        "        self.conv2 = nn.Conv3d(64, 32, kernel_size=3, padding=1)\n",
         "        self.drop1 = nn.Dropout(p=0.2)\n",
-        "        self.conv3 = nn.Conv3d(64, 32, kernel_size=3, padding=1)\n",
-        "        self.conv4 = nn.Conv3d(32, num_classes, kernel_size=3, padding=1)\n",
+        "        self.conv3 = nn.Conv3d(32, 16, kernel_size=3, padding=1)\n",
+        "        self.conv4 = nn.Conv3d(16, num_classes, kernel_size=3, padding=1)\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = F.relu(self.conv1(x))\n",
@@ -887,8 +890,8 @@
         "colab": {}
       },
       "source": [
-        "meta_data_reg_train = pd.read_csv(data_dir + 'meta/meta_data_reg_train.csv')\n",
-        "ids_seg_test = list(meta_data_reg_train['subject_id'])\n",
+        "meta_data_reg_test = pd.read_csv('meta_data_reg_test.csv')\n",
+        "ids_seg_test = list(meta_data_reg_test['subject_id'])\n",
         "files_seg_img_test = [data_dir + 'images/sub-' + f + '_T1w_unbiased.nii.gz' for f in ids_seg_test]\n",
         "files_seg_seg_test = [data_dir + 'segs_refs/sub-' + f + '_T1w_seg.nii.gz' for f in ids_seg_test]\n",
         "files_seg_msk_test = [data_dir + 'masks/sub-' + f + '_T1w_brain_mask.nii.gz' for f in ids_seg_test]\n",
@@ -902,7 +905,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lCEHUHJo5GW2",
+        "id": "0r19GsozmTiR",
         "colab_type": "text"
       },
       "source": [
@@ -913,7 +916,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XPc0wnHD64Kl",
+        "id": "DltaFqiSmZmo",
         "colab_type": "code",
         "colab": {}
       },
@@ -980,7 +983,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DcEZ5ZsrJdN-",
+        "id": "QMdyvaH6mgv5",
         "colab_type": "code",
         "colab": {}
       },
@@ -1083,17 +1086,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Qu-SjPz5JM8n",
+        "id": "cH0FjHVYmoZO",
         "colab_type": "text"
       },
       "source": [
-        "Runnning test use training dataset\n"
+        "Runnning test use training dataset"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Felq6rPhJLB0",
+        "id": "LEKzPZNimrbE",
         "colab_type": "code",
         "colab": {}
       },
@@ -1215,6 +1218,7 @@
         "for idx, _ in enumerate(tqdm(range(len(files_reg_seg_train)), desc='Calculating Features')):\n",
         "    \n",
         "    seg_filename = files_reg_seg_train[idx]\n",
+        "    \n",
         "    if os.path.exists(seg_filename):\n",
         "        seg = sitk.ReadImage(seg_filename)\n",
         "        \n",
